# eindopdracht_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
lib/: CMakeLists.txt  config.hpp
lib/FileHandling/: FileHandler.cpp  FileHandler.hpp
lib/FileHandling/Fetchers/: IFileFetcher.hpp  LocalFetcher.cpp  LocalFetcher.hpp  WebFetcher.cpp  WebFetcher.hpp
lib/FileHandling/Parsers/: IFileParser.hpp  XmlParser.cpp  XmlParser.hpp
lib/Misc/: Defines.hpp  Error.hpp  Types.hpp
resources/: kasteelruine.xml
src/: CMakeLists.txt  main.cpp
